Remove product from shopping cart 2

--- a/main-files/shop-cart-2.html
+++ b/main-files/shop-cart-2.html
@@ -429,7 +429,9 @@
                   </div>
                   <div>
                     <button><i class="fa-sharp fa-solid fa-heart"></i></button>
-                    <button><i class="fa-sharp fa-solid fa-trash"></i></button>
+                    <button data-id="1" class="cart-2-delete-item-btn">
+                      <i class="fa-sharp fa-solid fa-trash"></i>
+                    </button>
                   </div>
                 </div>
                 <div class="cart-item-input">
@@ -473,7 +475,9 @@
                   </div>
                   <div>
                     <button><i class="fa-sharp fa-solid fa-heart"></i></button>
-                    <button><i class="fa-sharp fa-solid fa-trash"></i></button>
+                    <button data-id="2" class="cart-2-delete-item-btn">
+                      <i class="fa-sharp fa-solid fa-trash"></i>
+                    </button>
                   </div>
                 </div>
                 <div class="cart-item-input">
@@ -518,7 +522,9 @@
                   </div>
                   <div>
                     <button><i class="fa-sharp fa-solid fa-heart"></i></button>
-                    <button><i class="fa-sharp fa-solid fa-trash"></i></button>
+                    <button data-id="3" class="cart-2-delete-item-btn">
+                      <i class="fa-sharp fa-solid fa-trash"></i>
+                    </button>
                   </div>
                 </div>
                 <div class="cart-item-input">
@@ -563,7 +569,9 @@
                   </div>
                   <div>
                     <button><i class="fa-sharp fa-solid fa-heart"></i></button>
-                    <button><i class="fa-sharp fa-solid fa-trash"></i></button>
+                    <button data-id="4" class="cart-2-delete-item-btn">
+                      <i class="fa-sharp fa-solid fa-trash"></i>
+                    </button>
                   </div>
                 </div>
                 <div class="cart-item-input">
@@ -608,7 +616,9 @@
                   </div>
                   <div>
                     <button><i class="fa-sharp fa-solid fa-heart"></i></button>
-                    <button><i class="fa-sharp fa-solid fa-trash"></i></button>
+                    <button data-id="5" class="cart-2-delete-item-btn">
+                      <i class="fa-sharp fa-solid fa-trash"></i>
+                    </button>
                   </div>
                 </div>
                 <div class="cart-item-input">
@@ -717,9 +727,7 @@
                 </div>
                 <div class="content">
                   <h3>Free us delivery</h3>
-                  <p>
-                    For US customers (including Alaska and Hawaii)
-                  </p>
+                  <p>For US customers (including Alaska and Hawaii)</p>
                 </div>
               </div>
             </div>
@@ -782,8 +790,8 @@
                 <div class="content">
                   <h3>1 year warranty</h3>
                   <p>
-                    All of our products are made with care and covered for
-                    one year...
+                    All of our products are made with care and covered for one
+                    year...
                   </p>
                 </div>
               </div>
@@ -823,7 +831,6 @@
           </div>
         </div>
       </div>
-
     </section>
 
     <!-- Suggested Car Section Start -->
