--- a/main-files/index.html
+++ b/main-files/index.html
@@ -667,7 +667,12 @@
                     </ul>
                     <div class="price-items">
                       <h3>$175,270</h3>
-                      <a href="car-details.html" class="theme-btn">View More</a>
+                      <div class="d-flex align-items-lg-center gap-1">
+                        <button class="theme-btn">
+                          cart
+                        </button>
+                        <a href="car-details.html" class="theme-btn">View More</a>
+                      </div>
                     </div>
                   </div>
                 </div>
