--- a/main-files/news.html
+++ b/main-files/news.html
@@ -337,6 +337,7 @@
                             <div class="menu-cart">
                                 <a href="shop-cart.html" class="cart-icon">
                                     <i class="fa-regular fa-cart-shopping"></i>
+                                    <span id="cart-count">0</span>
                                 </a>
                             </div>
                             <div class="header-button">
