--- a/main-files/shop-cart-3.html
+++ b/main-files/shop-cart-3.html
@@ -12,7 +12,7 @@
       content="RevAuto - Car Dealer & Services Html Template"
     />
     <!-- ======== Page title ============ -->
-    <title>RevAuto - Car Dealer & Services Html Template</title>
+    <title>Shopping Cart 3 - RevAuto</title>
     <!--<< Favcion >>-->
     <link rel="shortcut icon" href="assets/img/favicon.svg" />
     <!--<< Bootstrap min.css >>-->
@@ -511,7 +511,7 @@
                     </button>
                   </form>
                   <div class="w-25">
-                    <ul class=" fw-medium w-100">
+                    <ul class="fw-medium w-100">
                       <li class="d-flex align-items-center gap-4 justify-content-between ">
                         <span>Subtotal (<span id="cart-3-items"></span>)</span>
                         <span>$<span id="cart-3-items-subtotal"></span></span>
