right side top without same height

--- a/main-files/user-dashboard.html
+++ b/main-files/user-dashboard.html
@@ -400,13 +400,14 @@
     <section class="section-padding section-bg">
       <div class="container">
         <div class="user-dashboard-wrapper row g-2 g-md-3 g-lg-4">
+          <!-- left sidebar -->
           <div class="col-3 position-relative">
             <div class="position-static top-0">
               <div class="left-side">
                 <p>Navigation</p>
 
                 <ul class="navigation-list">
-                  <li class="active" >
+                  <li class="active">
                     <a href="user-dashboard.html">
                       <svg
                         width="18"
@@ -455,8 +456,27 @@
               </div>
             </div>
           </div>
+          <!-- right sidebar -->
           <div class="col-9">
-            <div class="bg-black">rights side</div>
+            <div class="right-side">
+              <div class="top">
+                <div class="profile">
+                  <img src="assets/img/user-dashboard/user.png" alt="RevAuto">
+                  <h5>Dianne Russell</h5>
+                  <p>Customer</p>
+                  <button>Edit Profile</button>
+                </div>
+                <div class="billing">
+                  <p class="title">Billing Address</p>
+                  <h5 class="name">Dainne Russell</h5>
+                  <p class="address">Valentin, Street Road 27, New York. USA - 752252</p>
+                  <p class="email">dainne.ressell@gmail.com</p>
+                  <p class="phone">(671) 555 0110</p>
+                  <button>Edit Address</button>
+                </div>
+              </div>
+              <div class="bottom"></div>
+            </div>
           </div>
         </div>
       </div>
