--- a/main-files/user-dashboard.html
+++ b/main-files/user-dashboard.html
@@ -461,7 +461,7 @@
             <div class="right-side">
               <div class="top">
                 <div class="profile">
-                  <img src="assets/img/user-dashboard/user.png" alt="RevAuto">
+                  <img src="assets/img/user-dashboard/user.png" alt="RevAuto" />
                   <h5>Dianne Russell</h5>
                   <p>Customer</p>
                   <button>Edit Profile</button>
@@ -469,13 +469,90 @@
                 <div class="billing">
                   <p class="title">Billing Address</p>
                   <h5 class="name">Dainne Russell</h5>
-                  <p class="address">Valentin, Street Road 27, New York. USA - 752252</p>
+                  <p class="address">
+                    4140 Parker Rd. Allentown, New Mexico <br />
+                    31134.
+                  </p>
                   <p class="email">dainne.ressell@gmail.com</p>
                   <p class="phone">(671) 555 0110</p>
                   <button>Edit Address</button>
                 </div>
               </div>
-              <div class="bottom"></div>
+              <div class="bottom">
+                <div class="header">
+                  <h5>Recent Order History</h5>
+                  <a href="order-history.html">View All</a>
+                </div>
+                <div class="w-100">
+                  <table class="w-100">
+                    <thead class="table-head">
+                      <tr class="px-5">
+                        <th>Order ID</th>
+                        <th>Date</th>
+                        <th>Total</th>
+                        <th>Status</th>
+                        <th>Options</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>#1234</td>
+                        <td>8 Sep, 2024</td>
+                        <td>$135.00 (5 Products)</td>
+                        <td>Processing</td>
+                        <td>
+                          <a href="#" class="view-details">View Details</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>#703</td>
+                        <td>24 May, 2024</td>
+                        <td>$25.00 (1 Product)</td>
+                        <td>On the way</td>
+                        <td>
+                          <a href="#" class="view-details">View Details</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>#130</td>
+                        <td>22 Oct, 2024</td>
+                        <td>$250.00 (4 Products)</td>
+                        <td>Completed</td>
+                        <td>
+                          <a href="#" class="view-details">View Details</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>#561</td>
+                        <td>1 Feb, 2024</td>
+                        <td>$35.00 (1 Products)</td>
+                        <td>Completed</td>
+                        <td>
+                          <a href="#" class="view-details">View Details</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>#536</td>
+                        <td>21 Sep, 2024</td>
+                        <td>$578.00 (13 Products)</td>
+                        <td>Completed</td>
+                        <td>
+                          <a href="#" class="view-details">View Details</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>#492</td>
+                        <td>22 Oct, 2024</td>
+                        <td>$345.00 (7 Products)</td>
+                        <td>Completed</td>
+                        <td>
+                          <a href="#" class="view-details">View Details</a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
             </div>
           </div>
         </div>
