Make responsive of user dashboard

--- a/main-files/user-dashboard.html
+++ b/main-files/user-dashboard.html
@@ -401,7 +401,7 @@
       <div class="container">
         <div class="user-dashboard-wrapper row g-2 g-md-3 g-lg-4">
           <!-- left sidebar -->
-          <div class="col-3 position-relative">
+          <div class="col-3 position-relative d-none d-lg-block">
             <div class="position-static top-0">
               <div class="left-side">
                 <p>Navigation</p>
@@ -457,7 +457,7 @@
             </div>
           </div>
           <!-- right sidebar -->
-          <div class="col-9">
+          <div class="col-lg-9">
             <div class="right-side">
               <div class="top">
                 <div class="profile">
@@ -478,79 +478,81 @@
                   <button>Edit Address</button>
                 </div>
               </div>
-              <div class="bottom">
-                <div class="header">
-                  <h5>Recent Order History</h5>
-                  <a href="order-history.html">View All</a>
-                </div>
-                <div class="w-100">
-                  <table class="w-100">
-                    <thead class="table-head">
-                      <tr class="px-5">
-                        <th>Order ID</th>
-                        <th>Date</th>
-                        <th>Total</th>
-                        <th>Status</th>
-                        <th>Options</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>#1234</td>
-                        <td>8 Sep, 2024</td>
-                        <td>$135.00 (5 Products)</td>
-                        <td>Processing</td>
-                        <td>
-                          <a href="#" class="view-details">View Details</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>#703</td>
-                        <td>24 May, 2024</td>
-                        <td>$25.00 (1 Product)</td>
-                        <td>On the way</td>
-                        <td>
-                          <a href="#" class="view-details">View Details</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>#130</td>
-                        <td>22 Oct, 2024</td>
-                        <td>$250.00 (4 Products)</td>
-                        <td>Completed</td>
-                        <td>
-                          <a href="#" class="view-details">View Details</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>#561</td>
-                        <td>1 Feb, 2024</td>
-                        <td>$35.00 (1 Products)</td>
-                        <td>Completed</td>
-                        <td>
-                          <a href="#" class="view-details">View Details</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>#536</td>
-                        <td>21 Sep, 2024</td>
-                        <td>$578.00 (13 Products)</td>
-                        <td>Completed</td>
-                        <td>
-                          <a href="#" class="view-details">View Details</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>#492</td>
-                        <td>22 Oct, 2024</td>
-                        <td>$345.00 (7 Products)</td>
-                        <td>Completed</td>
-                        <td>
-                          <a href="#" class="view-details">View Details</a>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
+              <div class="bottom overflow-x-auto">
+                <div style="min-width: 940px">
+                  <div class="header">
+                    <h5>Recent Order History</h5>
+                    <a href="order-history.html">View All</a>
+                  </div>
+                  <div class="w-100">
+                    <table class="w-100">
+                      <thead class="table-head">
+                        <tr class="px-5">
+                          <th>Order ID</th>
+                          <th>Date</th>
+                          <th>Total</th>
+                          <th>Status</th>
+                          <th>Options</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>#1234</td>
+                          <td>8 Sep, 2024</td>
+                          <td>$135.00 (5 Products)</td>
+                          <td>Processing</td>
+                          <td>
+                            <a href="#" class="view-details">View Details</a>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>#703</td>
+                          <td>24 May, 2024</td>
+                          <td>$25.00 (1 Product)</td>
+                          <td>On the way</td>
+                          <td>
+                            <a href="#" class="view-details">View Details</a>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>#130</td>
+                          <td>22 Oct, 2024</td>
+                          <td>$250.00 (4 Products)</td>
+                          <td>Completed</td>
+                          <td>
+                            <a href="#" class="view-details">View Details</a>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>#561</td>
+                          <td>1 Feb, 2024</td>
+                          <td>$35.00 (1 Products)</td>
+                          <td>Completed</td>
+                          <td>
+                            <a href="#" class="view-details">View Details</a>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>#536</td>
+                          <td>21 Sep, 2024</td>
+                          <td>$578.00 (13 Products)</td>
+                          <td>Completed</td>
+                          <td>
+                            <a href="#" class="view-details">View Details</a>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>#492</td>
+                          <td>22 Oct, 2024</td>
+                          <td>$345.00 (7 Products)</td>
+                          <td>Completed</td>
+                          <td>
+                            <a href="#" class="view-details">View Details</a>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
