Add order status time line

--- a/main-files/order-details.html
+++ b/main-files/order-details.html
@@ -12,7 +12,7 @@
       content="RevAuto - Car Dealer & Services Html Template"
     />
     <!-- ======== Page title ============ -->
-    <title>Shopping Cart 3 - RevAuto</title>
+    <title>Order Details - RevAuto</title>
     <!--<< Favcion >>-->
     <link rel="shortcut icon" href="assets/img/favicon.svg" />
     <!--<< Bootstrap min.css >>-->
@@ -564,6 +564,31 @@
                         <div class="payment-details-item">
                           <p class="payment-details-item-total">Total</p>
                           <span class="payment-details-item-price">$84.00</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-xl-12">
+                    <div class="order-details-bottom">
+                      <div class="order-details-status">
+                        <div class="row justify-content-center">
+                          <div class="col">
+                            <ul class="progress-tracker clearfix">
+                              <li class="progress-step completed" data-step="✔">
+                                <div class="step-title">Order received</div>
+                              </li>
+                              <li class="progress-step active" data-step="2">
+                                <div class="step-title">Processing</div>
+                              </li>
+                              <li class="progress-step" data-step="3">
+                                <div class="step-title">On the way</div>
+                              </li>
+                              <li class="progress-step" data-step="4">
+                                <div class="step-title">Delivered</div>
+                              </li>
+                            </ul>
+                          </div>
                         </div>
                       </div>
                     </div>
