product details in order details

--- a/main-files/order-details.html
+++ b/main-files/order-details.html
@@ -466,11 +466,11 @@
           <div class="col-lg-9">
             <div class="right-side">
               <div class="heading">
-                <div class="d-flex align-items-center gap-2">
+                <div class="d-sm-flex align-items-center gap-2">
                   <h5>Order Details</h5>
-                  <div class="circle"></div>
+                  <div class="circle d-none d-sm-block"></div>
                   <span>April 24, 2024</span>
-                  <div class="circle"></div>
+                  <div class="circle d-inline-block d-sm-block"></div>
                   <span>3 Products</span>
                 </div>
                 <a href="order-history.html" class="back-to-list"
@@ -588,6 +588,86 @@
                                 <div class="step-title">Delivered</div>
                               </li>
                             </ul>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="order-details-table">
+                        <div class="row justify-content-center">
+                          <div class="col-12">
+                            <div class="table-responsive">
+                              <table class="table align-middle">
+                                <thead>
+                                  <tr>
+                                    <th class="table-header">PRODUCT</th>
+                                    <th class="table-header">PRICE</th>
+                                    <th class="table-header">QUANTITY</th>
+                                    <th class="table-header text-end">
+                                      SUBTOTAL
+                                    </th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <td>
+                                      <div
+                                        class="d-flex align-items-center gap-3"
+                                      >
+                                        <img
+                                          src="assets/img/order-details/product-1.png"
+                                          alt="High-Neck puff jacket"
+                                          class="product-img"
+                                        />
+                                        <span class="product-name"
+                                          >High-Neck puff jacket</span
+                                        >
+                                      </div>
+                                    </td>
+                                    <td class="price">$14.00</td>
+                                    <td class="quantity">×5</td>
+                                    <td class="text-end subtotal">$70.00</td>
+                                  </tr>
+                                  <tr>
+                                    <td>
+                                      <div
+                                        class="d-flex align-items-center gap-3"
+                                      >
+                                        <img
+                                          src="assets/img/order-details/product-2.png"
+                                          alt="Flowy dress"
+                                          class="product-img"
+                                        />
+                                        <span class="product-name"
+                                          >flowy dress that often</span
+                                        >
+                                      </div>
+                                    </td>
+                                    <td class="price">$14.00</td>
+                                    <td class="quantity">×2</td>
+                                    <td class="text-end subtotal">$28.00</td>
+                                  </tr>
+                                  <tr>
+                                    <td>
+                                      <div
+                                        class="d-flex align-items-center gap-3"
+                                      >
+                                        <img
+                                          src="assets/img/order-details/product-3.png"
+                                          alt="Close-fitting dress"
+                                          class="product-img"
+                                        />
+                                        <span class="product-name"
+                                          >close-fitting dress</span
+                                        >
+                                      </div>
+                                    </td>
+                                    <td class="price">$26.70</td>
+                                    <td class="quantity">×10</td>
+                                    <td class="text-end subtotal">$267.00</td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </div>
                           </div>
                         </div>
                       </div>
