--- a/main-files/settings.html
+++ b/main-files/settings.html
@@ -144,7 +144,7 @@
                   </div>
                 </li>
               </ul>
-              <div class="header-button mt-4">
+              <div class="header-button mt-3">
                 <a href="contact.html" class="theme-btn text-center">
                   Get A Quote
                 </a>
@@ -459,7 +459,80 @@
           <!-- right sidebar -->
           <div class="col-lg-9">
             <div class="right-side">
-              <!--  -->
+              <div class="row">
+                <div class="col-12">
+                  <!-- account setting -->
+                  <div class="account-settings">
+                    <div class="account-settings-heading">
+                      <h5>Account Settings</h5>
+                    </div>
+
+                    <div class="account-settings-body">
+                      <div class="row">
+                        <div class="col-xl-7">
+                          <div class="account-settings-body-form">
+                            <form action="#">
+                              <div class="form-group">
+                                <label for="first-name">First Name</label>
+                                <input
+                                  type="text"
+                                  id="first-name"
+                                  class="form-control"
+                                  placeholder="John"
+                                />
+                              </div>
+                              <div class="form-group mt-3">
+                                <label for="last-name">Last Name</label>
+                                <input
+                                  type="text"
+                                  id="last-name"
+                                  class="form-control"
+                                  placeholder="Doe"
+                                />
+                              </div>
+                              <div class="form-group mt-3">
+                                <label for="email">Email Address</label>
+                                <input
+                                  type="email"
+                                  id="email"
+                                  class="form-control"
+                                  placeholder="dianne.russell@mail.com"
+                                />
+                              </div>
+
+                              <div class="form-group mt-3">
+                                <label for="last-name">Phone Number</label>
+                                <input
+                                  type="text"
+                                  id="last-name"
+                                  class="form-control"
+                                  placeholder="(880) 1918 123124"
+                                />
+                              </div>
+
+                              <div class="form-group">
+                                <button type="submit">Save Changes</button>
+                              </div>
+                            </form>
+                          </div>
+                        </div>
+                        <div class="col-xl-5">
+                          <div class="account-settings-body-profile">
+                            <img
+                              src="assets/img/user-dashboard/user.png"
+                              alt="RevAuto"
+                            />
+
+                            <button>Chose Image</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- billing address -->
+                </div>
+              </div>
             </div>
           </div>
         </div>
