--- a/main-files/settings.html
+++ b/main-files/settings.html
@@ -531,6 +531,124 @@
                   </div>
 
                   <!-- billing address -->
+                  <div class="billing-settings">
+                    <div class="billing-settings-heading">
+                      <h5>Billing Address</h5>
+                    </div>
+
+                    <div class="billing-settings-body">
+                      <form action="#">
+                        <div class="row g-3">
+                          <div class="col-md-4">
+                            <div class="form-group">
+                              <label for="first-name-billing">First Name</label>
+                              <input
+                                type="text"
+                                id="first-name-billing"
+                                class="form-control"
+                                placeholder="John"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-md-4">
+                            <div class="form-group">
+                              <label for="last-name-billing">Last Name</label>
+                              <input
+                                type="text"
+                                id="last-name-billing"
+                                class="form-control"
+                                placeholder="Doe"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-md-4">
+                            <div class="form-group">
+                              <label for="company-name">
+                                Company Name <span>(Optional)</span>
+                              </label>
+                              <input
+                                type="text"
+                                id="company-name"
+                                class="form-control"
+                                placeholder="Envato"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-md-12">
+                            <div class="form-group">
+                              <label for="company-name">Street Address</label>
+                              <input
+                                type="text"
+                                id="company-name"
+                                class="form-control"
+                                placeholder="4140 Parker Rd. Allentown, New Mexico 31134"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-md-4">
+                            <div class="form-group">
+                              <label for="country">Country</label>
+                              <input
+                                type="text"
+                                id="country"
+                                class="form-control"
+                                placeholder="United States"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-md-4">
+                            <div class="form-group">
+                              <label for="state">States</label>
+                              <input
+                                type="text"
+                                id="state"
+                                class="form-control"
+                                placeholder="Washington DC"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-md-4">
+                            <div class="form-group">
+                              <label for="zip"> Zip </label>
+                              <input
+                                type="text"
+                                id="zip"
+                                class="form-control"
+                                placeholder="24921"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <label for="email-billing">Email Address</label>
+                              <input
+                                type="text"
+                                id="email-billing"
+                                class="form-control"
+                                placeholder="dianne.russell@mail.com"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <label for="phone-billing">Phone Number</label>
+                              <input
+                                type="text"
+                                id="phone-billing"
+                                class="form-control"
+                                placeholder="(880) 1918 123124"
+                              />
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <button type="submit">Save Changes</button>
+                            </div>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
