Change Password and completed

--- a/main-files/settings.html
+++ b/main-files/settings.html
@@ -649,6 +649,65 @@
                       </form>
                     </div>
                   </div>
+
+                  <!-- Change Password -->
+                  <div class="billing-settings">
+                    <div class="billing-settings-heading">
+                      <h5>Change Password</h5>
+                    </div>
+
+                    <div class="billing-settings-body">
+                      <form action="#">
+                        <div class="row g-3">
+                          <div class="col-md-12">
+                            <div class="form-group">
+                              <label for="current-pasword"
+                                >Current Password</label
+                              >
+                              <input
+                                type="text"
+                                id="current-pasword"
+                                class="form-control"
+                                placeholder="Password"
+                              />
+                            </div>
+                          </div>
+
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <label for="new-pasword">New Password</label>
+                              <input
+                                type="text"
+                                id="current-pasword"
+                                class="form-control"
+                                placeholder="Password"
+                              />
+                            </div>
+                          </div>
+
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <label for="confirm-new-pasword"
+                                >Confirm New Password</label
+                              >
+                              <input
+                                type="text"
+                                id="confirm-new-pasword"
+                                class="form-control"
+                                placeholder="Password"
+                              />
+                            </div>
+                          </div>
+
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <button type="submit">Changes Password</button>
+                            </div>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
