change bg of settings page

--- a/main-files/settings.html
+++ b/main-files/settings.html
@@ -397,7 +397,7 @@
       </div>
     </div>
 
-    <section class="section-padding section-bg">
+    <section class="section-padding">
       <div class="container">
         <div class="user-dashboard-wrapper order-history row g-2 g-md-3 g-lg-4">
           <!-- left sidebar -->
