--- a/main-files/order-history.html
+++ b/main-files/order-history.html
@@ -482,7 +482,9 @@
                           <td>$135.00 (5 Products)</td>
                           <td>Processing</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -491,7 +493,9 @@
                           <td>$25.00 (1 Product)</td>
                           <td>On the way</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -500,7 +504,9 @@
                           <td>$250.00 (4 Products)</td>
                           <td>Completed</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -509,7 +515,9 @@
                           <td>$35.00 (1 Products)</td>
                           <td>Completed</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -518,7 +526,9 @@
                           <td>$578.00 (13 Products)</td>
                           <td>Completed</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -527,7 +537,9 @@
                           <td>$345.00 (7 Products)</td>
                           <td>Completed</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -536,7 +548,9 @@
                           <td>$135.00 (5 Products)</td>
                           <td>Processing</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -545,7 +559,9 @@
                           <td>$25.00 (1 Product)</td>
                           <td>On the way</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -554,7 +570,9 @@
                           <td>$250.00 (4 Products)</td>
                           <td>Completed</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -563,7 +581,9 @@
                           <td>$35.00 (1 Products)</td>
                           <td>Completed</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -572,7 +592,9 @@
                           <td>$578.00 (13 Products)</td>
                           <td>Completed</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                         <tr>
@@ -581,7 +603,9 @@
                           <td>$345.00 (7 Products)</td>
                           <td>Completed</td>
                           <td>
-                            <a href="#" class="view-details">View Details</a>
+                            <a href="order-details.html" class="view-details"
+                              >View Details</a
+                            >
                           </td>
                         </tr>
                       </tbody>
