--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       <!-- Feature area end here -->
 
       <!-- Preview area start here -->
-      <section class="preview-area pt-120 pb-120" id="home">
+      <section class="preview-area pt-120" id="home">
         <div class="preview__shape">
           <img
             src="landing/assets/images/landing-images/preview-shape1.png"
@@ -291,7 +291,7 @@
             </p>
           </div>
 
-          <div class="row g-5">
+          <div class="row g-3">
             <div class="col-xl-3 col-lg-4">
               <div class="demo-area">
                 <a
@@ -440,12 +440,12 @@
               data-wow-duration="1000ms"
             >
               You will get some modern unique and minimal inner pages with light
-              for your website. Let’s see all inner pages!
+              for your website. Let's see all inner pages!
             </p>
           </div>
-          <div class="row g-5">
+          <div class="row g-3">
             <h3 class="inner-pages-h3 mt-5">Car Detail Pages</h3>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/car-details.html"
@@ -466,7 +466,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/shop-details.html"
@@ -487,7 +487,7 @@
               </h3>
             </div>
             <h3 class="inner-pages-h3 mt-5">Shop Pages</h3>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/car.html"
@@ -508,7 +508,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/shop.html"
@@ -528,7 +528,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/shop-right-sidebar.html"
@@ -548,7 +548,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/shop-left-sidebar.html"
@@ -569,7 +569,7 @@
               </h3>
             </div>
             <h3 class="inner-pages-h3 mt-5">Cart Pages</h3>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/shop-cart.html"
@@ -589,8 +589,90 @@
                 >
               </h3>
             </div>
+            <h3 class="inner-pages-h3 mt-5">User Dashboard Pages</h3>
+            <div class="col-lg-3">
+              <a
+                target="_blank"
+                href="main-files/user-dashboard.html"
+                class="preview__item image d-block"
+              >
+                <img
+                  src="landing/assets/images/landing-images/dashboard.png"
+                  alt="image"
+                />
+              </a>
+              <h3 class="text-center">
+                <a
+                  target="_blank"
+                  href="main-files/user-dashboard.html"
+                  class="primary-hover text-capitalize mt-30"
+                  >User Dashboard</a
+                >
+              </h3>
+            </div>
+            <div class="col-lg-3">
+              <a
+                target="_blank"
+                href="main-files/settings.html"
+                class="preview__item image d-block"
+              >
+                <img
+                  src="landing/assets/images/landing-images/settings.png"
+                  alt="image"
+                />
+              </a>
+              <h3 class="text-center">
+                <a
+                  target="_blank"
+                  href="main-files/settings.html"
+                  class="primary-hover text-capitalize mt-30"
+                  >User Settings</a
+                >
+              </h3>
+            </div>
+            <div class="col-lg-3">
+              <a
+                target="_blank"
+                href="main-files/order-history.html"
+                class="preview__item image d-block"
+              >
+                <img
+                  src="landing/assets/images/landing-images/order-history.png"
+                  alt="image"
+                />
+              </a>
+              <h3 class="text-center">
+                <a
+                  target="_blank"
+                  href="main-files/order-history.html"
+                  class="primary-hover text-capitalize mt-30"
+                  >Order History</a
+                >
+              </h3>
+            </div>
+            <div class="col-lg-3">
+              <a
+                target="_blank"
+                href="main-files/order-details.html"
+                class="preview__item image d-block"
+              >
+                <img
+                  src="landing/assets/images/landing-images/order-details.png"
+                  alt="image"
+                />
+              </a>
+              <h3 class="text-center">
+                <a
+                  target="_blank"
+                  href="main-files/order-details.html"
+                  class="primary-hover text-capitalize mt-30"
+                  >Order Details</a
+                >
+              </h3>
+            </div>
+
             <h3 class="inner-pages-h3 mt-5">Blog Pages</h3>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/news.html"
@@ -610,7 +692,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/news-details.html"
@@ -632,7 +714,7 @@
             </div>
             <h3 class="inner-pages-h3 mt-5">Other Pages</h3>
 
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/about.html"
@@ -653,7 +735,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/service.html"
@@ -673,7 +755,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/project.html"
@@ -693,7 +775,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/project-2.html"
@@ -713,7 +795,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/project-details.html"
@@ -733,7 +815,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/service-details.html"
@@ -753,7 +835,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/faq.html"
@@ -773,7 +855,7 @@
                 >
               </h3>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/404.html"
@@ -794,7 +876,7 @@
               </h3>
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/contact.html"
@@ -815,7 +897,7 @@
               </h3>
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <a
                 target="_blank"
                 href="main-files/checkout.html"
